result_table/viap_list/sorting_bubblesort_false-unreach-call2_ground.i/output_sorting_bubblesort_false-unreach-call2_ground.i.log
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c: In function ‘main’:
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:108:24: error: ‘i’ undeclared (first use in this function)
       printf("i:%d\n", i);
                        ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:108:24: note: each undeclared identifier is reported only once for each function it appears in
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:109:24: error: ‘t’ undeclared (first use in this function)
       printf("t:%d\n", t);
                        ^
Program Body
{
  int RET;
  RET = 0;
  int _1_PROVE[100000][100000];
  int a[100000];
  int swapped;
  swapped = 1;
  while (swapped > 0)
  {
    swapped = 0;
    int i;
    i = 1;
    while (i < 100000)
    {
      if (a[i] > a[i - 1])
      {
        int t;
        t = a[i];
        a[i] = a[i - 1];
        a[i - 1] = t;
        swapped = 1;
      }

      i = i + 1;
    }

  }

  int x;
  int y;
  x = 0;
  while (x < 100000)
  {
    y = x + 1;
    while (y < 100000)
    {
      _1_PROVE[y][x] = a[x] <= a[y];
      y = y + 1;
    }

    x = x + 1;
  }

  RET = 0;
}

Function Name:
main
Return Type:
int
Input Variables:
{}
Local Variables:
{ a:array swapped:int i:int _1_PROVE:array RET:int t:int y:int x:int}


Output in normal notation:
1. Frame axioms:
a1 = a

2. Output equations:
swapped1 = swapped9(_N2)
i1 = i9(_N2)
d1array1(_x1,_x2) = d1array9(_x1,_x2,_N2)
main = 0
d2array1(_x1,_x2,_x3) = d2array14(_x1,_x2,_x3,_N4)
y1 = y14(_N4)
x1 = (_N4+0)
t1 = t9(_N2)

3. Other axioms:
d1array6(_x1,_x2,(_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),ite(((_x1=a) and (_x2=((_n1+1)-1))),d1array6(a,(_n1+1),_n1,_n2),ite(((_x1=a) and (_x2=(_n1+1))),d1array6(a,((_n1+1)-1),_n1,_n2),d1array6(_x1,_x2,_n1,_n2))),d1array6(_x1,_x2,_n1,_n2))
t6((_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),d1array6(a,(_n1+1),_n1,_n2),t6(_n1,_n2))
swapped6((_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),1,swapped6(_n1,_n2))
d1array6(_x1,_x2,0,_n2) = d1array9(_x1,_x2,_n2)
t6(0,_n2) = t9(_n2)
swapped6(0,_n2) = 0
(_N1(_n2)>=(-(1)+100000))
(_n1<_N1(_n2)) -> ((_n1+1)<100000)
i9((_n2+1)) = (_N1(_n2)+1)
d1array9(_x1,_x2,(_n2+1)) = d1array6(_x1,_x2,_N1(_n2),_n2)
t9((_n2+1)) = t6(_N1(_n2),_n2)
swapped9((_n2+1)) = swapped6(_N1(_n2),_n2)
i9(0) = i
d1array9(_x1,_x2,0) = d1array(_x1,_x2)
t9(0) = t
swapped9(0) = 1
(0<=-(swapped9(_N2)))
(_n2<_N2) -> (swapped9(_n2)>0)
d2array11(_x1,_x2,_x3,(_n3+1),_n4) = d2array11(_x1,_x2,_x3,_n3,_n4)
d2array11(_x1,_x2,_x3,0,_n4) = d2array14(_x1,_x2,_x3,_n4)
(_N3(_n4)>=(-(((_n4+0)+1))+100000))
(_n3<_N3(_n4)) -> ((_n3+((_n4+0)+1))<100000)
y14((_n4+1)) = (_N3(_n4)+((_n4+0)+1))
d2array14(_x1,_x2,_x3,(_n4+1)) = d2array11(_x1,_x2,_x3,_N3(_n4),_n4)
y14(0) = y
d2array14(_x1,_x2,_x3,0) = d2array(_x1,_x2,_x3)
(_N4>=(-(0)+100000))
(_n4<_N4) -> ((_n4+0)<100000)

4. Assumption :

5. Assertion :
(d1array9(a,(_n4+0),_N2)<=d1array9(a,(_n3+((_n4+0)+1)),_N2))

Axiomes Added

d1array6(a,_x2,_N1(_n2),_n2) = ite((d1array6(a,(_n1+1),_N1(_n2),_n2)>d1array6(a,((_n1+1)-1),_N1(_n2),_n2)),ite((_x2=((_n1+1)-1)),d1array6(a,(_n1+1),_N1(_n2),_n2),ite((_x2=(_n1+1)),d1array6(a,((_n1+1)-1),_N1(_n2),_n2),d1array6(a,_x2,_N1(_n2),_n2))),d1array6(a,_x2,_N1(_n2),_n2))
d1array6(a,_x2,_N1(_n2),_n2) = ite((d1array(a,(_n1+1))>d1array(a,((_n1+1)-1))),ite((_x2=((_n1+1)-1)),d1array(a,(_n1+1)),ite((_x2=(_n1+1)),d1array(a,((_n1+1)-1)),d1array(a,_x2))),d1array(a,_x2))
d1array9(a,_x2,_N2) = ite((d1array(a,(_n1+1))>d1array(a,((_n1+1)-1))),ite((_x2=((_n1+1)-1)),d1array(a,(_n1+1)),ite((_x2=(_n1+1)),d1array(a,((_n1+1)-1)),d1array(a,_x2))),d1array(a,_x2))
d1array9(a,_x2,_N2) = ite((d1array9(a,(_n1+1),(_n2+1))>d1array9(a,((_n1+1)-1),(_n2+1))),ite((_x2=((_n1+1)-1)),d1array9(a,(_n1+1),(_n2+1)),ite((_x2=(_n1+1)),d1array9(a,((_n1+1)-1),(_n2+1)),d1array9(a,_x2,(_n2+1)))),d1array9(a,_x2,(_n2+1)))
d1array6(a,((_n1+1)-1),(_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),d1array6(a,(_n1+1),_n1,_n2),d1array6(a,((_n1+1)-1),_n1,_n2))
d1array6(a,(_n1+1),(_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),d1array6(a,((_n1+1)-1),_n1,_n2),d1array6(a,(_n1+1),_n1,_n2))
t6((_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),d1array6(a,(_n1+1),_n1,_n2),t6(_n1,_n2))
swapped6((_n1+1),_n2) = ite((d1array6(a,(_n1+1),_n1,_n2)>d1array6(a,((_n1+1)-1),_n1,_n2)),1,swapped6(_n1,_n2))
d1array6(a,_x2,0,_n2) = d1array9(a,_x2,_n2)
t6(0,_n2) = t9(_n2)
swapped6(0,_n2) = 0
(_N1(_n2)>=(-(1)+100000))
(_n1<_N1(_n2)) -> ((_n1+1)<100000)
i9((_n2+1)) = (_N1(_n2)+1)
d1array9(a,_x2,(_n2+1)) = d1array6(a,_x2,_N1(_n2),_n2)
t9((_n2+1)) = t6(_N1(_n2),_n2)
swapped9((_n2+1)) = swapped6(_N1(_n2),_n2)
i9(0) = i
d1array9(a,_x2,0) = d1array(a,_x2)
t9(0) = t
swapped9(0) = 1
(0<=-(swapped9(_N2)))
(_n2<_N2) -> (swapped9(_n2)>0)
(_N3(_n4)>=(-(((_n4+0)+1))+100000))
(_n3<_N3(_n4)) -> ((_n3+((_n4+0)+1))<100000)
y14((_n4+1)) = (_N3(_n4)+((_n4+0)+1))
y14(0) = y
(_N4>=(-(0)+100000))
(_n4<_N4) -> ((_n4+0)<100000)
Unknown
